--- a/com/Docker-compose.yaml
+++ b/com/Docker-compose.yaml
@@ -3,10 +3,11 @@ networks:
   group-1-amdb-project:
     external: true
 services:
-  users-service:
-    container_name: "users-service"
-    image: "docker.io/heritier004/ea-project:users-service"
-    entrypoint: sh -c "/wait && java -jar users-app.jar --spring.profiles.active=docker"
+  users-db-server:
+    container_name: "users-db-server"
+    image: postgres
+    expose:
+      - 5432
     networks:
       - "group-1-amdb-project"
     environment:
@@ -71,3 +72,18 @@ services:
       - "group-1-amdb-project"
     ports:
       - "15672:15672"
+
+  users-service:
+    container_name: "users-service"
+    image: "docker.io/heritier004/ea-project:users-service"
+    networks:
+      - "group-1-amdb-project"
+    depends_on:
+      - service-discovery
+      - config-server
+    entrypoint: sh -c "/wait && java -jar users-app.jar --spring.profiles.active=docker"
+    environment:
+      - WAIT_HOSTS=service-discovery:8761, config-server:8888
+      - WAIT_HOSTS_TIMEOUT=300
+      - WAIT_SLEEP_INTERVAL=30
+      - WAIT_HOST_CONNECT_TIMEOUT=30
