--- a/com/deployment.yaml
+++ b/com/deployment.yaml
@@ -2,21 +2,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: "users-service"
+  name: "config-server"
 spec:
   selector:
     matchLabels:
-      app: "users-service"
+      app: "config-server"
   template:
     metadata:
       labels:
-        app: "users-service"
+        app: "config-server"
     spec:
       containers:
-        - name: "users-service-image"
-          image: "docker.io/heritier004/ea-project:users-service"
-          args: ["--spring.profiles.active=k8s"]
-          imagePullPolicy: "Always"
+        - name: "config-server-image"
+          image: "docker.io/heritier004/ea-project:config-server"
+          imagePullPolicy: "IfNotPresent"
           ports:
             - containerPort: 8888
 ---
@@ -62,10 +61,11 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: "users-service"
+  name: "service-discovery"
 spec:
+  type: NodePort
   selector:
-    app: "users-service"
+    app: "service-discovery"
   ports:
     - protocol: TCP
       port: 80
@@ -160,3 +160,43 @@ spec:
     - protocol: TCP
       port: 80
       targetPort: 5672
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: "users-service"
+spec:
+  selector:
+    matchLabels:
+      app: "users-service"
+  template:
+    metadata:
+      labels:
+        app: "users-service"
+    spec:
+      containers:
+        - name: "users-service-image"
+          image: "docker.io/heritier004/ea-project:users-service"
+          args: [ "--spring.profiles.active=k8s" ]
+          imagePullPolicy: "Always"
+          ports:
+            - containerPort: 8181
+      initContainers:
+        - name: "config-server"
+          image: busybox:1.28
+          command: [ 'sh', '-c', "until nslookup config-server.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for config-server; sleep 2; done" ]
+        - name: "service-discovery"
+          image: busybox:1.28
+          command: [ 'sh', '-c', "until nslookup service-discovery.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for service-discovery; sleep 2; done" ]
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: "users-service"
+spec:
+  selector:
+    app: "users-service"
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 8181
