--- a/com/Docker-compose.yaml
+++ b/com/Docker-compose.yaml
@@ -1,7 +1,7 @@
 version: "3.9"
 networks:
   group-1-amdb-project:
-    external: true
+    external: false
 services:
   users-db-server:
     container_name: "users-db-server"
@@ -14,6 +14,7 @@ services:
       POSTGRES_PASSWORD: 1234
       POSTGRES_USERNAME: "postgres"
       POSTGRES_DB: "users-db"
+
   config-server:
     container_name: config-server
     image: "docker.io/heritier004/ea-project:config-server"
@@ -87,3 +88,41 @@ services:
       - WAIT_HOSTS_TIMEOUT=300
       - WAIT_SLEEP_INTERVAL=30
       - WAIT_HOST_CONNECT_TIMEOUT=30
+
+  keycloak:
+    image: jboss/keycloak:4.0.0.Final
+    restart: on-failure
+    command:
+      - "-b"
+      - "0.0.0.0"
+      - "-Dkeycloak.migration.action=import"
+      - "-Dkeycloak.migration.provider=dir"
+      - "-Dkeycloak.migration.dir=/config/"
+      - "-Dkeycloak.migration.strategy=IGNORE_EXISTING"
+    volumes:
+      - ./config:/config/
+    environment:
+      - KEYCLOAK_USER=admin
+      - KEYCLOAK_PASSWORD=admin
+      - DB_VENDOR=postgres
+      - DB_USER=admin
+      - DB_PASSWORD=1234
+      - DB_ADDR=keycloak-db
+      - DB_PORT=5432
+      - DB_DATABASE=keycloakdb
+    ports:
+      - "1000:8080"
+    depends_on:
+      - keycloak-db
+
+  keycloak-db:
+    image: postgres:12-alpine
+    environment:
+      POSTGRES_USER: admin
+      POSTGRES_PASSWORD: 1234
+      POSTGRES_DB: keycloakdb
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+
+volumes:
+  pgdata:
